--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mi primera página</title>
 </head>
 <body>
-    <h1>MI PRIMER TÍTULO DE LA WEB</h1>
+    <center><h1>MI PRIMER TÍTULO DE LA WEB</h1></center>
+    <img src="https://th.bing.com/th/id/OIP.73aujrd22R2GJY2VLZ9EkAHaEw?rs=1&pid=ImgDetMain" alt="" srcset="">
 </body>
 </html>
