Imagen centrada y nuevo título

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Mi primera página</title>
 </head>
 <body>
-    <center><h1>MI PRIMER TÍTULO DE LA WEB</h1></center>
+    <center><h1>ESTADIO METROPOLITANO</h1>
     <img src="https://th.bing.com/th/id/OIP.73aujrd22R2GJY2VLZ9EkAHaEw?rs=1&pid=ImgDetMain" alt="" srcset="">
+    </center>
 </body>
 </html>
