Nuevo título y nueva imagen

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Mi primera página</title>
 </head>
 <body>
-    <center><h1>ESTADIO METROPOLITANO</h1>
-    <img src="https://th.bing.com/th/id/R.b7277ba0b5216f201e6d07d748157a95?rik=puNq98dkORyM8A&riu=http%3a%2f%2fstadiony.net%2fpictures%2fstadiums%2fesp%2festadio_metropolitano%2festadio_metropolitano22.jpg&ehk=MZgmC0VfHjWsW4qYpK%2b1m9XmNIxB7%2bwD4lOeA9kwfn8%3d&risl=&pid=ImgRaw&r=0" alt="" srcset="">
+    <center><h1>BEACH HOUSE</h1>
+    <img src="https://pitchfork.com/news/beach-house-once-twice-melody-is-the-best-selling-album-in-the-us/" alt="" srcset="">
+    
     </center>
 </body>
 </html>
