--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <center><h1>BEACH HOUSE</h1>
-    <img src="https://pitchfork.com/news/beach-house-once-twice-melody-is-the-best-selling-album-in-the-us/" alt="" srcset="">
-    
+    <img src="https://media.pitchfork.com/photos/621f074b0502878c863de856/2:1/w_1920,c_limit/beach-house.jpg" alt="" srcset="">
     </center>
 </body>
 </html>
